<resources>
    <string name="app_name">HomeWork15</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="phonenumber">PhoneNumber</string>
    <string name="edit">Edit</string>
    <string name="gender">Gender</string>
    <string name="save">Save</string>
</resources>